# advent-of-code-2021-rs

./: .gitignore  Cargo.toml  README
10_syntax_scoring/: README.md
10_syntax_scoring/src/: main.rs
11_dumbo_octopus/: Cargo.toml  README.md
11_dumbo_octopus/src/: main.rs
12_passage_pathing/: Cargo.toml  README.md
12_passage_pathing/src/: main.rs
13_transparent_origami/: Cargo.toml  README.md
13_transparent_origami/src/: main.rs
14_extended_polymerization/: README.md
14_extended_polymerization/src/: main.rs
15_chiton/: Cargo.toml  README.md
15_chiton/src/: main.rs
16_packet_decoder/: README.md
16_packet_decoder/src/: main.rs
17_trick_shot/: Cargo.toml  README.md
17_trick_shot/src/: main.rs
18_snailfish/: README.md
18_snailfish/src/: main.rs
19_beacon_scanner/: Cargo.toml  README.md
19_beacon_scanner/src/: main.rs
1_sonar_sweep/: Cargo.toml  README
1_sonar_sweep/src/: main.rs
20_trench_map/: Cargo.toml  README.md
20_trench_map/src/: main.rs
21_dirac_dice/: Cargo.toml  README.md
21_dirac_dice/src/: main.rs
22_reactor_reboot/: README.md
22_reactor_reboot/src/: main.rs
23_amphipod/: Cargo.toml  README.md
23_amphipod/src/: burrow.rs  main.rs
24_arithmetic_logic_unit/: Cargo.toml  README.md
25_sea_cucumber/: Cargo.toml  README.md
25_sea_cucumber/src/: main.rs
2_dive/: README
3_binary_diagnostic/: README
4_giant_squid/: README
5_hydrothermal_venture/: Cargo.toml  README
6_lanternfish/: README
7_the_treachery_of_whales/: README
8_seven_segment_search/: README.md
9_smoke_basin/: Cargo.toml  README.md
(+9 files in other folders)
