[workspace]

members = [
    "1_sonar_sweep",
    "2_dive",
    "3_binary_diagnostic",
    "4_giant_squid",
    "5_hydrothermal_venture",
    "6_lanternfish",
    "7_the_treachery_of_whales",
    "8_seven_segment_search",
    "9_smoke_basin",
    "10_syntax_scoring",
    "11_dumbo_octopus",
    "12_passage_pathing",
    "13_transparent_origami",
    "14_extended_polymerization",
    "15_chiton",
    "16_packet_decoder",
    "17_trick_shot",
    "18_snailfish",
    "19_beacon_scanner",
    "20_trench_map"
]